syntax = "proto3";

package emailservice;

option go_package = "./";

service EmailService {
    rpc SendEmail (EmailRequest) returns (EmailResponse);
}

message EmailRequest {
    string email = 1;
    string createdAt = 2;
    string title = 3;
    string content = 4;
    string replyContent = 5;
    string replyCreatedAt = 6;
}

message EmailResponse {
    string status = 1;
}
